Fri Aug 24 14:45:26 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* dln.c (dln_strerror): fix a bug that sometimes made null message on
	  win32 (Tietew <tietew@tietew.net>'s patch).

	* win32/win32.c (mystrerror): ditto.

Thu Aug 23 10:10:59 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): should not dump core for "defined?(())".

	* eval.c (umethod_bind): recv can be an instance of descender of
	  oklass if oklass is a Module.

Wed Aug 22 23:20:03 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_equal): check identiry equality first.

Mon Aug 20 19:53:16 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/digest/sha2/extconf.rb: fix support for cross-compiling.

	* mkconfig.rb: fix support for autoconf 2.52.

Mon Aug 20 16:09:05 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (mod_av_set): detect constant overriding for built-in
	  classes/modules.

Mon Aug 20 12:43:08 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): should retrieve __member__ data from
	  non-singleton class.

Wed Aug 17 13:55:33 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/Makefile.sub: merge from 1.7: use del instead of rm.

Fri Aug 17 00:49:51 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parse_regx): handle backslash escaping of delimiter here.

Thu Aug 16 19:53:19 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/resolv.rb, lib/resolv-replace.rb: Copy from 1.7.

Thu Aug 16 16:32:21 2001  Akinori MUSHA  <knu@iDaemons.org>

	* LEGAL, ext/Setup*, ext/digest/*: Merge from 1.7: Import digest
	  modules.

	* ext/md5/*: Move to ext/digest/md5.

Thu Aug 16 03:54:36 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* lib/mkmf.rb: add -I$(srcdir) to CPPFLAGS.

Tue Aug 14 11:49:00 2001  TOYOFUKU Chikanobu  <toyofuku@juice.or.jp>

	* string.c (rb_str_cmp): remove needless conditional.

Sat Aug 11 23:08:01 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
