@@ -1125,7 +1125,7 @@ fix_equal(x, y)
     VALUE x, y;
 {
     if (FIXNUM_P(y)) {
-	return (FIX2LONG(x) == FIX2LONG(y))?Qtrue:Qfalse;
+	return (x == y)?Qtrue:Qfalse;
     }
     else {
 	return num_equal(x, y);
@@ -1556,6 +1556,8 @@ Init_Numeric()
     rb_define_method(rb_cNumeric, "truncate", num_truncate, 0);
 
     rb_cInteger = rb_define_class("Integer", rb_cNumeric);
+    rb_undef_method(CLASS_OF(rb_cInteger), "new");
+
     rb_define_method(rb_cInteger, "integer?", int_int_p, 0);
     rb_define_method(rb_cInteger, "upto", int_upto, 1);
     rb_define_method(rb_cInteger, "downto", int_downto, 1);
@@ -1576,8 +1578,6 @@ Init_Numeric()
     rb_include_module(rb_cFixnum, rb_mPrecision);
     rb_define_singleton_method(rb_cFixnum, "induced_from", rb_fix_induced_from, 1);
     rb_define_singleton_method(rb_cInteger, "induced_from", rb_int_induced_from, 1);
-
-    rb_undef_method(CLASS_OF(rb_cFixnum), "new");
 
     rb_define_method(rb_cFixnum, "to_s", fix_to_s, 0);
     rb_define_method(rb_cFixnum, "type", fix_type, 0);
